<resources>
    <!-- Application -->
    <string name="app_name">WorKit</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="register_account">Don\'t have an account? Create one now! It\'s super easy!</string>

    <!-- Forgot Password Popup -->
    <string name="forgotPasswordTitle">Write your email address</string>
    <string name="forgotPasswordMessage">Υou will soon receive an email with the steps you have to follow to change your password</string>
    <string name="send">Send</string>

    <!-- Register -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="register_button">Register</string>

    <!-- Toolbar -->
    <string name="action_search">Search</string>
    <string name="search_hint">Search...</string>

    <!-- Content Description -->
    <string name="call">Call</string>
    <string name="sms">Sms</string>
    <string name="more_info">More Info</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="visibility">Visibility</string>

    <!-- Customer Bottombar -->
    <string name="general">General</string>
    <string name="books">Books</string>
    <string name="transactions">Transactions</string>
    <string name="appointments">Appointments</string>

    <!-- Customers -->
    <string name="contact_info">Contact Info</string>
    <string name="locations">Locations</string>
    <string name="address">Address</string>
    <string name="address_number">Address No</string>
    <string name="zip">Post Code</string>
    <string name="phone_tag">Type</string>
    <string name="add_phone">Add phone number</string>
    <string name="add_address">Add address</string>
    <string name="add_email">Add email</string>
    <string name="autofill">Autofill</string>

</resources>
