<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_info"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/general"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_books"
        android:enabled="true"
        android:icon="@drawable/ic_books"
        android:title="@string/books"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_transactions"
        android:enabled="true"
        android:icon="@drawable/ic_transactions"
        android:title="@string/transactions"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_appointments"
        android:enabled="true"
        android:icon="@drawable/ic_appointment"
        android:title="@string/appointments"
        app:showAsAction="ifRoom" />
</menu>