<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/scrollLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <LinearLayout
            android:id="@+id/emailLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginTop="8dp"
            >

            <ImageView
                android:id="@+id/emailsImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                app:srcCompat="@drawable/ic_email"
                android:tint="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="8dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/addEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="8dp"
                android:text="@string/add_email"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/addEmailImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:visibility="gone"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_add_circle"
                />

        </LinearLayout>

        <View
            android:id="@+id/emailsDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            />

        <LinearLayout
            android:id="@+id/phonesLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginTop="8dp"
            >

            <ImageView
                android:id="@+id/phonesImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                app:srcCompat="@drawable/ic_call"
                android:tint="@color/colorPrimary"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/phonesList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="8dp"
                tools:listitem="@layout/list_element_customer_phone"
                />

            <TextView
                android:id="@+id/addPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="8dp"
                android:text="@string/add_phone"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:visibility="gone"
                />
            <ImageView
                android:id="@+id/addPhoneImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:visibility="gone"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_add_circle"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/addMorePhonesImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@drawable/ic_add_circle"
            />

        <View
            android:id="@+id/phonesDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            />

        <LinearLayout
            android:id="@+id/addressesLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginTop="8dp"
            >

            <ImageView
                android:id="@+id/addressesImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                app:srcCompat="@drawable/ic_location"
                android:tint="@color/colorPrimary"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/addressesList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="8dp"
                tools:listitem="@layout/list_element_customer_address" />

            <TextView
                android:id="@+id/addAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="8dp"
                android:text="@string/add_address"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/addAddressImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:visibility="gone"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_add_circle"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/addMoreAddressesImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@drawable/ic_add_circle"
            />

        <View
            android:id="@+id/addressesDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>